--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <form enctype="multipart/form-data" action="/upload/image" method="post">
+        <input id="image-file" type="file" />
+    </form>
 </head>
 <body>
     
