--- a/templates/front/style/main.scss
+++ b/templates/front/style/main.scss
@@ -1,3 +1,65 @@
-body {
-    background-color: rgba(6, 6, 16, 0.922);
+* {
+    margin: 0;
+    padding: 0;
 }
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
+}
+
+html {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    font-size: 65.5%; // 1rem = 10px
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    }
+ 
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    position: relative;
+    font-size: 65.5%; // 1rem = 10px
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #060610eb;
+}
+
+
+
+.input-form {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    background-color: #17975beb;
+    border-radius: 5px;
+
+}
+
+#drop_zone {
+    
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+
+   & p {
+       font-family: 'Roboto', sans-serif;
+       color: rgb(15, 15, 13);
+       font-size: 20px;
+       text-transform: uppercase;
+       font-weight: bold;
+   }
+  }
