Changed input form for files

--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/main.scss">
-    <title>Document</title>
-    <div class="input-form">
+    <title>SampleTrim</title>
+    <!-- <div class="input-form">
         <div id="drop_zone" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
             <p>Drag file to this Zone</p>
           </div>
-</div>
+</div> -->
+
 </head>
 <body>
-    
+    <div class="upload-btn-wrapper">
+        <button class="btn">Upload a file</button>
+        <input type="file" name="myfile" />
+      </div>    
     <script src="./index.js"></script>
 </body>
 </html>
