--- a/templates/front/style/main.scss
+++ b/templates/front/style/main.scss
@@ -37,29 +37,69 @@ body {
 
 
 
-.input-form {
-    position: relative;
-    width: 400px;
-    height: 200px;
-    background-color: #17975beb;
-    border-radius: 5px;
+// .input-form {
+//     position: relative;
+//     width: 400px;
+//     height: 200px;
+//     background-color: #17975beb;
+//     border-radius: 5px;
 
-}
+// }
 
-#drop_zone {
+// #drop_zone {
     
-    height: 100%;
+//     height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
    
 
-   & p {
-       font-family: 'Roboto', sans-serif;
-       color: rgb(15, 15, 13);
-       font-size: 20px;
-       text-transform: uppercase;
-       font-weight: bold;
-   }
+//    & p {
+//        font-family: 'Roboto', sans-serif;
+//        color: rgb(15, 15, 13);
+//        font-size: 20px;
+//        text-transform: uppercase;
+//        font-weight: bold;
+//    }
+//   }
+
+
+.upload-btn-wrapper {
+    z-index: 100;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    transition: background 0.2s ease-in,
+                color 0.2s ease-in; 
+    
+ 
+
+    &:hover .btn {
+        // background: #0e813e;
+        background: #f3f3f3;
+        color: #0ea44d;
+    }
+  }
+  
+  .btn {
+    // border: 2px solid gray;
+    border: none;
+    color: #f3f3f3;
+    background: #0ea44d;
+    padding: 3rem 4rem;
+    border-radius: 8px;
+    font-size: 2.5rem;
+    font-weight: bold;
+    transition: background 0.2s ease-in,
+    color 0.2s ease-in; 
+  }
+  
+  .upload-btn-wrapper input[type=file] {
+    font-size: 10rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    cursor: pointer;
   }
