--- a/templates/front/style/main.scss
+++ b/templates/front/style/main.scss
@@ -27,14 +27,249 @@ body {
             box-sizing: border-box;
     position: relative;
     font-size: 65.5%; // 1rem = 10px
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-color: #060610eb;
+    
 }
 
+
+.container {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  // background-image: linear-gradient(to bottom, #0f1823, #12121c, #110c14, #0c0609, #000000);
+  
+  // background: #07122fb0;
+  margin: 0 auto;
+  
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  
+}
+
+header {
+  position: relative;
+  height: 10vh;
+  width: 100%;
+  background-color: #101010;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  & h2 {
+    color: white;
+    font-size: 4rem;
+    font-family: 'Oswald', sans-serif;
+    
+    
+    background-image: linear-gradient(to right bottom, #63f371, #64ec7b, #4eca6c, #54c475, #87b496);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+
+  & a {
+
+    & img {
+      height: 3rem;
+      transform: rotate(30deg);
+    }
+  }
+
+
+}
+
+.hero {
+  position: relative;
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-image: linear-gradient(to right bottom, #221d1d, #25201e, #26241f, #262923, #242d29);
+  background-color: #232323;
+
+  & h1 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 5.5rem;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px #00000025;
+  }
+}
+
+.form-change {
+  position: relative;
+  width: 60rem;
+  height: 20rem;
+  // display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: row;
+  display:grid;
+  grid-template-columns: 300px 300px;
+  grid-row: auto auto;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  
+  
+
+  & div {
+    display: flex; 
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: white;
+  background: #17171754;
+  transition: background 0.2s ease-in,
+              color 0.2s ease-in;
+  
+  &:hover {
+    background: #27272754;
+    color: yellow;
+  }
+  }
+}
+
+.icon {
+  height: 4rem;
+  opacity: 60%;
+
+
+  &-1 {
+    transform: rotate(30deg);
+    position: absolute;
+    top: 4%;
+    right: 8%;
+  }
+
+  &-2 {
+    transform: rotate(45deg);
+    position: absolute;
+    top: 35%;
+    right: 20%;
+  }
+
+  &-3 {
+    transform: rotate(-30deg);
+    position: absolute;
+    top: 30%;
+    right: 5%;
+  }
+
+  &-4 {
+    transform: rotate(60deg);
+    position: absolute;
+    top: 65%;
+    right: 15%;
+  
+  }
+
+  &-5 {
+    transform: rotate(-40deg);
+    position: absolute;
+    top: 75%;
+    right: 30%;
+  }
+
+  &-6 {
+    transform: rotate(-20deg);
+    position: absolute;
+    top: 85%;
+    right: 8%;
+  }
+
+  &-7 {
+    transform: rotate(40deg);
+    position: absolute;
+    top: 5%;
+    right: 25%;
+  }
+
+  &-8 {
+    transform: rotate(40deg);
+    position: absolute;
+    top: 10%;
+    left: 25%;
+  }
+
+  &-9 {
+    transform: rotate(40deg);
+    position: absolute;
+    top: 25%;
+    left: 5%;
+  }
+
+  &-10 {
+    transform: rotate(24deg);
+    position: absolute;
+    top: 38%;
+    left: 21%;
+  }
+
+  &-11 {
+    transform: rotate(-27deg);
+    position: absolute;
+    top: 50%;
+    left: 8%;
+  }
+
+  &-12 {
+    transform: rotate(40deg);
+    position: absolute;
+    top: 10%;
+    left: 15%;
+  }
+
+  &-13 {
+    transform: rotate(40deg);
+    position: absolute;
+    top: 75%;
+    left: 12%;
+  }
+
+  &-14 {
+    transform: rotate(-30deg);
+    position: absolute;
+    top: 85%;
+    left: 22%;
+  }
+}
+
+
+footer {
+  height: 10vh;
+  width: 100%;
+  background-color: #101010;
+  color: white;
+  display:  flex;
+  justify-content: center;
+  align-items: center;
+
+
+  & a {
+
+
+    & svg {
+      height: 5rem;
+      fill: #c1c1c1;
+      transition: fill 0.15s ease-in;
+      
+    }
+
+    &:hover svg {
+      fill: #efefef;
+    }
+  }
+}
 
 
 // .input-form {
@@ -93,6 +328,7 @@ body {
     font-weight: bold;
     transition: background 0.2s ease-in,
     color 0.2s ease-in; 
+    text-shadow: 5px 2px 2px #00000025;
   }
   
   .upload-btn-wrapper input[type=file] {
@@ -103,3 +339,50 @@ body {
     opacity: 0;
     cursor: pointer;
   }
+
+
+
+.dropzone {
+  min-height: 150px;
+  width: 40rem;
+  background: #0ea44d;
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 8px;
+
+  & p {
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 15px #00000025;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+
+    & span {
+      color: #67fba5;
+      cursor: pointer;
+      text-shadow: 5px 5px 4px #00000025;
+    }
+  }
+}
+
+
+select {
+  width: 80%;
+  height: 50%;
+  background-color: #17ca61;
+  border: none;
+  font-size: 2rem;
+  text-align-last: center;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  color: #3b3838c3;
+  letter-spacing: 0.5px;
+  text-shadow: 1px 1px 3px #00000025;
+  
+}
+
+  
