--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/main.scss">
+    <link rel="stylesheet" href="/style/main.scss">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
     <!-- <link rel="stylesheet" href="style/dropzone.min.css"> -->
   
