--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -77,6 +77,52 @@ body {
       }
   }
 
+
+
+
+.inputfile {
+	height: 10rem;
+    width: 35rem;
+    opacity: 0;
+    z-index: 999;
+	overflow: hidden;
+	position: absolute;
+	
+}
+
+.inputfile + label {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: white;
+    background-color: #0ea44d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+    width: 35rem;
+
+    
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: #298e53;
+}
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
+}
+
+.inputfile:focus + label {
+	outline: 1px dotted #000;
+	outline: -webkit-focus-ring-color auto 5px;
+}
+
+
+
+
+
+
     .hero {
         position: relative;
         height: 80vh;
@@ -88,10 +134,17 @@ body {
         background-image: linear-gradient(to right bottom, #221d1d, #25201e, #26241f, #262923, #242d29);
         background-color: #232323;
 
-        & h1 {
-            font-size: 5rem;
-            color: white;
-            }
+        & .title {
+            & h1 {
+                font-size: 5rem;
+                color: white;
+                }
+    
+            & h2 {color: #efefef;}
+            
+        }
+
+     
     }
 
   
