--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,48 +67,6 @@ header h2 {
   -webkit-text-fill-color: transparent;
 }
 
-#successMsg {
-  color: #0ea44d;
-  font-size: 3rem;
-  display: none;
-}
-
-.inputfile {
-  height: 10rem;
-  width: 35rem;
-  opacity: 0;
-  z-index: 999;
-  overflow: hidden;
-  position: absolute;
-}
-
-.inputfile + label {
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: white;
-  background-color: #0ea44d;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10rem;
-  width: 35rem;
-}
-
-.inputfile:focus + label,
-.inputfile + label:hover {
-  background-color: #298e53;
-}
-
-.inputfile + label {
-  cursor: pointer;
-  /* "hand" cursor */
-}
-
-.inputfile:focus + label {
-  outline: 1px dotted #000;
-  outline: -webkit-focus-ring-color auto 5px;
-}
-
 .hero {
   position: relative;
   height: 80vh;
@@ -122,12 +80,138 @@ header h2 {
 }
 
 .hero .title h1 {
-  font-size: 5rem;
+  font-size: 7rem;
   color: white;
+  text-align: center;
+  font-family: 'Dosis', sans-serif;
+  letter-spacing: 3px;
+  text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
 }
 
 .hero .title h2 {
-  color: #efefef;
+  font-size: 3rem;
+  text-transform: uppercase;
+  color: #57FC8F;
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.hero .form-box {
+  background-image: linear-gradient(to right bottom, #0eb66f, #11b16d, #13ab6b, #16a669, #18a167);
+  padding: 2rem;
+  border-radius: 5px;
+  height: 35rem;
+  width: 70rem;
+}
+
+.hero .form-box #form-send {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hero .form-box #form-send select {
+  background-color: #9fecbf;
+  height: 4rem;
+  width: 65%;
+  font-size: 2rem;
+  font-family: 'Dosis', sans-serif;
+  text-align-last: center;
+  border: none;
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.hero .form-box #form-send select:focus {
+  outline: none;
+}
+
+.hero .form-box #form-send #submit-btn {
+  display: block;
+  padding: 1rem 4rem;
+  border: 0 none;
+  cursor: pointer;
+  border-radius: 5px;
+  background-image: linear-gradient(to right top, #29cd5a, #3fd76a, #51e079, #61ea89, #71f398);
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.hero .form-box #form-send #submit-btn p {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 600;
+  font-size: 2.2rem;
+  color: white;
+}
+
+.hero .form-box .select-options {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#test-btn {
+  padding: 1rem 4rem;
+  background: #b50e72;
+  border: 0 none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 2rem;
+}
+
+#successMsg {
+  color: #2631cf;
+  font-size: 3rem;
+  display: none;
+}
+
+.inputfile {
+  height: 20rem;
+  width: 90%;
+  opacity: 0;
+  z-index: 999;
+  overflow: hidden;
+  position: absolute;
+}
+
+.inputfile:hover + #mleko {
+  background: #086931;
+}
+
+label p {
+  text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.inputfile + label {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: white;
+  background-color: #40AD8C;
+  border: 2px dashed white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20rem;
+  width: 90%;
+  transition: background 0.15s ease-in;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+  background-color: #298e53;
+}
+
+.inputfile + label {
+  cursor: pointer;
+  /* "hand" cursor */
+}
+
+.inputfile:focus + label {
+  outline: none;
 }
 
 footer {
@@ -148,20 +232,4 @@ footer a svg {
 
 footer a svg:hover {
   fill: #efefef;
-}
-
-.dropzone {
-  min-height: 20rem;
-  width: 45rem;
-  background: #0ea44d;
-  padding: 20px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  border-radius: 8px;
-}
-
-.dropzone span {
-  font-size: 2.5rem;
 }
