--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,3 +1,5 @@
+//          OVERALL STYLING
+
 * {
     margin: 0;
     padding: 0;
@@ -58,6 +60,9 @@ body {
   }
 
 
+  //                HEADER
+
+
   header {
       position: relative;
       height: 10vh;
@@ -78,35 +83,172 @@ body {
   }
 
 
+  //                HERO
+
+  .hero {
+    position: relative;
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-image: linear-gradient(to right bottom, #221d1d, #25201e, #26241f, #262923, #242d29);
+    background-color: #232323;
+
+    & .title {
+        & h1 {
+            font-size:7rem;
+            color: white;
+            text-align: center;
+            font-family: 'Dosis', sans-serif;
+            letter-spacing: 3px;
+            text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+            }
+
+        & h2 {
+            font-size: 3rem;
+            text-transform: uppercase;
+            color: #57FC8F;
+            font-family: 'Quicksand', sans-serif;
+            text-align: center;
+            text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+        }
+        
+    }
+
+    .form-box {
+        background-image: linear-gradient(to right bottom, #0eb66f, #11b16d, #13ab6b, #16a669, #18a167);
+        padding: 2rem;
+        border-radius: 5px;
+        height: 35rem;
+        width: 70rem;
+
+        & #form-send {
+            position: relative;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+
+            & select {
+                background-color: rgb(159, 236, 191);
+                height: 4rem;
+                width: 65%;
+                font-size: 2rem;
+                font-family: 'Dosis', sans-serif;
+                text-align-last: center;
+                border: none;
+                box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+
+                &:focus {
+                    outline: none;
+                }
+             
+               
+            }
+
+            & #submit-btn {
+                display: block;
+                padding:1rem 4rem; 
+                border:0 none;
+                cursor:pointer;
+                border-radius: 5px; 
+
+                
+                background-image: linear-gradient(to right top, #29cd5a, #3fd76a, #51e079, #61ea89, #71f398);
+                box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+
+    & p {
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 600;
+        font-size: 2.2rem;
+        color: white;
+       
+    }
+
+            }
+        }
+
+        & .select-options {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        
+    }
+
+
+
+ 
+}
+
+
+#test-btn {
+    padding:1rem 4rem; 
+    background:rgb(181, 14, 114); 
+    border:0 none;
+    cursor:pointer;
+    border-radius: 5px; 
+    font-size: 2rem;
+
+}
+
+#successMsg {
+    color: #2631cf;
+    font-size: 3rem;
+    display: none;
+}
 
 
 .inputfile {
-	height: 10rem;
-    width: 35rem;
+	height: 20rem;
+    width: 90%;
     opacity: 0;
     z-index: 999;
 	overflow: hidden;
-	position: absolute;
+    position: absolute;
+    
+    
+    &:hover + #mleko {
+        
+        background: #086931;
+    }
 	
 }
 
+label {
+    & p {
+        text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.25);
+    }
+}
+
+
 .inputfile + label {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     font-weight: 700;
     color: white;
-    background-color: #0ea44d;
+    background-color: #40AD8C;
+    border: 2px dashed white;
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10rem;
-    width: 35rem;
+    height: 20rem;
+    width: 90%;
+    transition: background 0.15s ease-in;
 
+   
     
 }
 
 .inputfile:focus + label,
 .inputfile + label:hover {
     background-color: #298e53;
+    
 }
 
 .inputfile + label {
@@ -114,8 +256,7 @@ body {
 }
 
 .inputfile:focus + label {
-	outline: 1px dotted #000;
-	outline: -webkit-focus-ring-color auto 5px;
+outline: none;
 }
 
 
@@ -123,33 +264,11 @@ body {
 
 
 
-    .hero {
-        position: relative;
-        height: 80vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        background-image: linear-gradient(to right bottom, #221d1d, #25201e, #26241f, #262923, #242d29);
-        background-color: #232323;
-
-        & .title {
-            & h1 {
-                font-size: 5rem;
-                color: white;
-                }
-    
-            & h2 {color: #efefef;}
-            
-        }
-
-     
-    }
+ 
 
   
 
-
+//              FOOTER
 
 
 
@@ -175,20 +294,3 @@ body {
     }
       
 
-
-
-    .dropzone {
-        min-height: 20rem;
-        width: 45rem;
-        background: #0ea44d;
-        padding: 20px 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        border-radius: 8px;
-    }
-
-    .dropzone span {
-        font-size: 2.5rem;
-    }
