--- a/templates/index.html
+++ b/templates/index.html
@@ -2,27 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:600|Quicksan:400:600d&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',     filename='css/style.css') }}">
     <!-- <link rel="stylesheet" href="{{ url_for('static',     filename='css/dropzone.min.css') }}"> -->
+    <link rel="shortcut icon" href="#" />
     <title>Flask-Dropzone Demo: Click Upload</title>
-     <!-- {{ dropzone.load_css() }}
-    {{ dropzone.style(
-        'min-height: 150px;
-        width: 400px;
-        background: #1952b6;
-        padding: 20px 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        border-radius: 8px;
-        ') }}  -->
+  
 </head>
 <body>
     <div class="container">
         <header>
             <h2>SimpleTrim</h2>
-            
           </header>
 
           <div class="hero">
@@ -32,60 +22,48 @@
               <!-- <form action="" method="post" enctype="multipart/form-data">
                   <input type="file" name="file" />
                 </form> -->
-              <h2>Split your mp3 <br> song into pieces</h2>
+              <h2>Split your mp3 song into pieces</h2>
 
             </div>
-          
 
-            <!-- {{ dropzone.create('/') }} -->
+
+            <div class="form-box">
+
+
+              <form action = "{{ url_for('upload')}}" method = "POST" 
+              enctype = "multipart/form-data"
+              id="form-send">
+              
+              <input type="file" name="file" id="file" class="inputfile" required  multiple/>
+              <label id="mleko" for="file"><p>Drag file(s) or click to upload</p></label>
+              
+              <div class="select-options">
+                <select
+                name="type" required>
+                    <option value="vocals">Vocals</option>
+                    <option value="instrumental">Instrumental</option>
+                    <option value="vocals-drums">Vocals & Drums</option>
+                    <option value="drums">Drums</option>
+                </select>
+                
+                <button id="submit-btn" type = "submit" required/><p>UPLOAD</p></button>
+    
+                <div class="successMsg" id="successMsg">
+                  
+                  <button type="button" id="test-btn" value="SPLIT">SPLIT</button>
+                  
+                </div>
+              </div>
             
-            <form action = "{{ url_for('upload')}}" method = "POST" 
-            enctype = "multipart/form-data">
-            
-            <div class="successMsg" id="successMsg">
-              File uploaded
-              <button id="">idzie dalej</button>
+
+              </form>
+
             </div>
+
+            </div>
+         
+
         
-            <input type="file" name="file" id="file" class="inputfile" required  multiple/>
-<label for="file"><p>Upload file</p></label>
-
-            <select
-            name="type" required>
-                <option value="vocals">Vocals</option>
-                <option value="instrumental">Instrumental</option>
-                <option value="vocals-drums">Vocals & Drums</option>
-                <option value="drums">Drums</option>
-            </select>
-            
-            <input type = "submit" required/>
-         </form>
-
-            <!-- <form action="/file-upload" required
-            class="dropzone"
-            id="my-awesome-dropzone">
-            <div class="dz-message" data-dz-message><span>Drop files here or click to upload</span></div>
-            <select 
-            name="type">
-                <option value="vocals">Vocals</option>
-                <option value="instrumental">Instrumental</option>
-                <option value="vocals-drums">Vocals & Drums</option>
-                <option value="drum">Drums</option>
-            </select>
-            <button id="upload-file">Upload</button>
-          </form> -->
-
-      
-
-        <!-- {{ dropzone.create('/') }}
-        <select name="type">
-            <option value="vocals">Vocals</option>
-            <option value="instrumental">Instrumental</option>
-            <option value="vocals-drums">Vocals & Drums</option>
-            <option value="drum">Drums</option>
-          </select>
-        <button id="upload">Upload</button> -->
-        </div>
 
         <footer>  
             <a href="https://github.com/jgarbalski/trim_sample" target="_blank"><svg class="icon-github" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
@@ -95,7 +73,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript"
     src="{{ url_for('static', filename='js/main.js') }}"></script>
-{{ dropzone.load_js() }}
-{{ dropzone.config() }}
+
 </body>
 </html>
