--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                     <option value="drums">Drums</option>
                 </select>
                 
-                <button id="submit-btn" type = "submit" required/><p>UPLOAD</p></button>
+                <button id="submit-btn" type = "submit" required/><span>UPLOAD</span></button>
     
                 <div class="successMsg" id="successMsg">
                   
