--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,9 @@
                 <button id="submit-btn" type = "submit" required/><span>UPLOAD</span></button>
     
                 <div class="successMsg" id="successMsg">
-                  
-                  <button type="button" id="test-btn" value="SPLIT">SPLIT</button>
+                  <!-- <form action="{{ url_for('run_spleeter')}}" method="POST" id="form-split" enctype="multipart/form-data"> -->
+                    <button type="button" type="submit" id="test-btn" value="SPLIT">SPLIT</button>
+                  <!-- </form> -->
                   
                 </div>
               </div>
