Improved js button functions

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
               
               <div class="select-options">
                 <select
-                name="type" required>
+                name="type" id="select-song" required>
                     <option value="vocals">Vocals</option>
                     <option value="instrumental">Instrumental</option>
                     <option value="vocals-drums">Vocals & Drums</option>
